--- a/grocery.html
+++ b/grocery.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 <body>
-    <img src="/grocery.jpg" style="max-width:100%;max-height:100%;" id="pic" alt="">
+    <img src="./grocery.jpg" style="max-width:100%;max-height:100%;" id="pic" alt="">
     <div class="heading">
         <p id="heads">Grocery List</p>
         <button id="submit" onclick="myClick();">Click</button>
